# starcraft2replay

./: Abilities.md  BuildNumber.md  CMakeLists.txt  GameEventsOverview.md  GameEventsSelect.md  ProjectHome.md  README.md  ReplayAttributesEvents.md  ReplayDetails.md  ReplayFileHeader.md  ReplayInfo.md  TODO.md  UML.md  UnitTypes.md
inc/mpq/: mpqarchive.h  mpqfile.h  mpqlib.h
inc/sc2map/: Map.h
inc/sc2replay/: gameevents.h  info.h  messageevents.h  mpq.h  replay.h  syncevents.h
material/: replay1.game.dump  replay11.SC2Replay  replay11.game.dump  replay12.info.dump  replay12.message.dump  replay13.game.dump  replay14.SC2Replay  replay15.game.dump  replay16.SC2Replay  replay16.info.dump  replay17.SC2Replay  replay17.game.dump  replay17.info.dump  replay18.game.dump  replay18.info.dump  replay18.message.dump  replay2.SC2Replay  replay20.message.dump  replay3.SC2Replay  replay4.game.dump  replay4.info.dump  replay5.SC2Replay  replay5.game.dump  replay5.info.dump  replay6.SC2Replay  replay6.game.dump  replay6.info.dump  replay7.game.dump  replay7.message.dump  replay8.SC2Replay  replay8.info.dump  replay9.SC2Replay
net/: AssemblyInfo.cpp  Replay.cpp  Replay.h  Util.cpp
php/: php.i
php/extension/: Includes.h  MPQArchive.cpp  MPQBlock.cpp  MPQBlock.h  MPQFile.cpp  PHPExtension.cpp  PHPExtension.h
php/extension-new/: Replay.h  extension.h  info.h  mpq.cpp  replay.cpp  zend_include.h
python/: CMakeLists.txt  pysc2replay.cpp
src/: Map.cpp  gameevents.cpp  info.cpp  messageevents.cpp  replay.cpp  syncevents.cpp
src/mpq/: mpqarchive.cpp  mpqfile.cpp
tests/: read_mpq.cpp  sc2.php  test.SC2Replay
tools/: CMakeLists.txt  extract_gameevents_dump.cpp  extract_map.cpp  extract_syncevents_dump.cpp
trunk/: CMakeLists.txt
trunk/inc/mpq/: mpqarchive.h  mpqfile.h  mpqlib.h
trunk/inc/sc2replay/: gameevents.h  info.h  mpq.h  replay.h  syncevents.h  types.h
trunk/material/: replay1.SC2Replay  replay1.info.dump  replay1.message.dump  replay10.SC2Replay  replay10.game.dump  replay10.info.dump  replay11.info.dump  replay12.SC2Replay  replay12.game.dump  replay13.SC2Replay  replay13.game.dump  replay13.info.dump  replay14.game.dump  replay14.info.dump  replay15.SC2Replay  replay15.info.dump  replay15.message.dump  replay16.game.dump  replay18.SC2Replay  replay19.SC2Replay  replay19.game.dump  replay19.info.dump  replay2.game.dump  replay2.info.dump  replay2.message.dump  replay20.SC2Replay  replay20.game.dump  replay20.info.dump  replay3.game.dump  replay3.info.dump  replay4.SC2Replay  replay4.game.dump  replay7.SC2Replay  replay7.info.dump  replay8.game.dump  replay9.game.dump  replay9.info.dump  replay9.message.dump
trunk/net/: Info.cpp  Info.h  Replay.h  Util.cpp  Util.h
trunk/php/: php.i
trunk/php/extension/: MPQArchive.h  MPQFile.h
trunk/php/extension-new/: extension.cpp  info.cpp  mpq.h
trunk/src/: gameevents.cpp  messageevents.cpp  mpqimpl.cpp  replay.cpp
trunk/src/mpq/: mpqarchive.cpp  mpqfile.cpp
trunk/tests/: CMakeLists.txt  sc2img.php
trunk/tools/: extract_gameevents_dump.cpp  extract_info_dump.cpp  extract_messageevents_dump.cpp  extract_syncevents_dump.cpp
wiki/: Abilities.wiki  BuildNumber.wiki  GameEventsOverview.wiki  GameEventsSelect.wiki  README.wiki  ReplayAttributesEvents.wiki  ReplayDetails.wiki  ReplayFileHeader.wiki  ReplayInfo.wiki  TODO.wiki  UML.wiki  UnitTypes.wiki
